internal/gatewayapi/testdata/envoyextensionpolicy-with-extproc-with-traffic-features.out.yaml
backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-grpc
    namespace: envoy-gateway
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: grpc-backend
      sectionName: grpc
    validation:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      hostname: grpc-backend
  status:
    ancestors:
    - ancestorRef:
        group: gateway.envoyproxy.io
        kind: EnvoyExtensionPolicy
        name: policy-for-http-route
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls-backend-ip
    namespace: envoy-gateway
  spec:
    targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-ip-tls
    validation:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      hostname: ip-backend
  status:
    ancestors:
    - ancestorRef:
        group: gateway.envoyproxy.io
        kind: EnvoyExtensionPolicy
        name: policy-for-http-route
        namespace: default
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-ip
    namespace: default
  spec:
    endpoints:
    - ip:
        address: 1.1.1.1
        port: 3001
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: backend-ip-tls
    namespace: envoy-gateway
  spec:
    endpoints:
    - ip:
        address: 2.2.2.2
        port: 3443
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
envoyExtensionPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    name: policy-for-http-route
    namespace: default
  spec:
    extProc:
    - backendRefs:
      - name: grpc-backend
        namespace: envoy-gateway
        port: 8000
      - name: grpc-backend-2
        port: 9000
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-ip
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-ip-tls
        namespace: envoy-gateway
      backendSettings:
        circuitBreaker:
          maxConnections: 2048
        connection:
          bufferLimit: 20Mi
        dns:
          respectDnsTtl: true
        healthCheck:
          passive:
            consecutiveGatewayErrors: 4
            interval: 5s
        http2:
          initialConnectionWindowSize: 2Mi
          initialStreamWindowSize: 128Ki
          maxConcurrentStreams: 200
          onInvalidMessage: TerminateStream
        loadBalancer:
          consistentHash:
            header:
              name: X-some-header
            type: Header
          type: ConsistentHash
        proxyProtocol:
          version: V2
        tcpKeepalive:
          probes: 7
        timeout:
          tcp:
            connectTimeout: 15s
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: default
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - www.foo.com
    parentRefs:
    - name: gateway-1
      namespace: default
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: default
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-2
    namespace: default
  spec:
    hostnames:
    - www.bar.com
    parentRefs:
    - name: gateway-1
      namespace: default
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /bar
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: default
        sectionName: http
infraIR:
  default/gateway-1:
    proxy:
      listeners:
      - name: default/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: default
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: default/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  default/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-default-gateway-1-bfd08ef4
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: default/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-default-gateway-1-bfd08ef4
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: default/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: default
        sectionName: http
      name: default/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: default
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-1/rule/0/backend/0
            protocol: HTTP
            weight: 1
        envoyExtensions:
          extProcs:
          - authority: grpc-backend.envoy-gateway:8000
            destination:
              metadata:
                kind: EnvoyExtensionPolicy
                name: policy-for-http-route
                namespace: default
              name: envoyextensionpolicy/default/policy-for-http-route/extproc/0
              settings:
              - addressType: IP
                endpoints:
                - host: 7.7.7.7
                  port: 8000
                metadata:
                  kind: Service
                  name: grpc-backend
                  namespace: envoy-gateway
                  sectionName: "8000"
                name: envoyextensionpolicy/default/policy-for-http-route/extproc/0/backend/0
                protocol: GRPC
                tls:
                  alpnProtocols: null
                  caCertificate:
                    certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3p [...]
                    name: configmap/envoy-gateway/ca-cmap
                  maxVersion: "1.3"
                  minVersion: "1.2"
                  sni: grpc-backend
                weight: 1
              - addressType: IP
                endpoints:
                - host: 8.8.8.8
                  port: 9000
                metadata:
                  kind: Service
                  name: grpc-backend-2
                  namespace: default
                  sectionName: "9000"
                name: envoyextensionpolicy/default/policy-for-http-route/extproc/0/backend/1
                protocol: GRPC
                weight: 1
              - addressType: IP
                endpoints:
                - host: 1.1.1.1
                  port: 3001
                metadata:
                  kind: Backend
                  name: backend-ip
                  namespace: default
                name: envoyextensionpolicy/default/policy-for-http-route/extproc/0/backend/2
                protocol: GRPC
                weight: 1
              - addressType: IP
                endpoints:
                - host: 2.2.2.2
                  port: 3443
                metadata:
                  kind: Backend
                  name: backend-ip-tls
                  namespace: envoy-gateway
                name: envoyextensionpolicy/default/policy-for-http-route/extproc/0/backend/3
                protocol: GRPC
                tls:
                  alpnProtocols: null
                  caCertificate:
                    certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3p [...]
                    name: configmap/envoy-gateway/ca-cmap
                  maxVersion: "1.3"
                  minVersion: "1.2"
                  sni: ip-backend
                weight: 1
            name: envoyextensionpolicy/default/policy-for-http-route/extproc/0
            traffic:
              backendConnection:
                bufferLimit: 20971520
              circuitBreaker:
                maxConnections: 2048
              dns:
                respectDnsTtl: true
              healthCheck:
                passive:
                  consecutiveGatewayErrors: 4
                  interval: 5s
              http2:
                initialConnectionWindowSize: 131072
                initialStreamWindowSize: 2097152
                maxConcurrentStreams: 200
                resetStreamOnError: true
              loadBalancer:
                consistentHash:
                  headers:
                  - name: X-some-header
              proxyProtocol:
                version: V2
              tcpKeepalive:
                probes: 7
              timeout:
                tcp:
                  connectTimeout: 15s
        hostname: www.foo.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-2
            namespace: default
          name: httproute/default/httproute-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-2/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.bar.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-2
          namespace: default
        name: httproute/default/httproute-2/rule/0/match/0/www_bar_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /bar
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
